--- a/Biografia/index.html
+++ b/Biografia/index.html
@@ -7,16 +7,19 @@
         <div class="contenedor">
             <section>
                 <h1>Carolina Chico</h1>
-                <img src="imagen/2020-12-15-22-32-44-482.jpg" width=50%/>
+                <img src="imagen/2020-12-15-22-32-44-482.jpg" width=30%/>
             </section>
-            <h1>
+            <h2>
              Algo de mí  
-            </h1>
+            </h2>
             <p>
                 Soy Nacida en Bogotá, con padre del Tolima y madre de Bogotá, Ingeniera En Mecatrónica con experiencia en aseguramiento y control de calidad en el area de instrumentación y en construcción de oficinas. Soy casada hace dos años con un hermoso bebé de 11 meses, actualemnete me encuentro cuidandolo, aprendiendo a ser madre.
 
             </p>
-            <div>Gustos y hobbies: Me gusta viajar, conocer nuevas cosas y aprender, me encanta el ajiaco el jugo de guanabana y el patacón. Me gusta la salsa aunque no la se bailar, y la musica pop asi como el rock.Me gusta jugar tennis auqnue hace rato no lo hago. Mis hobbies es hacer manualidades, pintar aunque no soy artista.</div>
+            <h2>
+                Gustos y Hobbies  
+               </h2>
+            <div> Me gusta viajar, conocer nuevas cosas y aprender, me encanta el ajiaco el jugo de guanabana y el patacón. Me gusta la salsa aunque no la se bailar, y la musica pop asi como el rock.Me gusta jugar tennis auqnue hace rato no lo hago. Mis hobbies es hacer manualidades, pintar aunque no soy artista.</div>
             <div>Correo:carolina.chico@gmail.com</div>
         </div>
 
